projeto/ecs-service.tf
resource "aws_lb" "ecs_alb" {
  name               = "${var.project_name}-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.ecs_sg.id]
  subnets            = [for subnet in aws_subnet.ecs_subnet : subnet.id]
  tags = {
    Name = "${var.project_name}-alb"
  }
}

resource "aws_lb_target_group" "ecs_tg" {
  name        = "${var.project_name}-tg"
  port        = 80
  protocol    = "HTTP"
  target_type = "ip"
  vpc_id      = aws_vpc.ecs_vpc.id
  health_check {
    path                = "/"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
  }
}

resource "aws_lb_listener" "front_end" {
  load_balancer_arn = aws_lb.ecs_alb.arn
  port              = 80
  protocol          = "HTTP"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.ecs_tg.arn
  }
}

#resource "aws_ecs_task_definition" "nginx" {
#  family                   = "nginx"
#  network_mode             = "awsvpc"
#  requires_compatibilities = ["FARGATE"]
#  cpu                      = "256"
#  memory                   = "512"
#  container_definitions = jsonencode([
#    {
#      name      = "nginx"
#      image     = "nginx:latest"
#      essential = true
#      entryPoint = [
#        "sh",
#        "-c"
#      ]
#      command = [
#        "/bin/sh -c \"echo 'comando'\""
#      ]
#      portMappings = [
#        {
#          containerPort = 80
#          hostPort      = 80
#        }
#      ]
#    }
#  ])
#}

#resource "aws_ecs_service" "nginx_service" {
#  name            = "${var.project_name}-service"
#  cluster         = aws_ecs_cluster.ecs_cluster.id
#  task_definition = aws_ecs_task_definition.nginx.arn
#  desired_count   = 1
#  launch_type     = "FARGATE"
#  load_balancer {
#    target_group_arn = aws_lb_target_group.ecs_tg.arn
#    container_name   = "nginx"
#    container_port   = 80
#  }
#  network_configuration {
#    subnets          = [for subnet in aws_subnet.ecs_subnet : subnet.id]
#    security_groups  = [aws_security_group.ecs_sg.id]
#    assign_public_ip = true
#  }
#  depends_on = [
#    aws_lb_listener.front_end
#  ]
#}
